[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/components/BulletSpawner.gd" type="Script" id=1]

[node name="BulletSpawner" type="Position2D"]
position = Vector2( 514.072, 285.076 )
script = ExtResource( 1 )
emitter = null

[node name="BulletArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 4

[connection signal="area_shape_entered" from="BulletArea" to="." method="_on_BulletArea_area_shape_entered"]
[connection signal="body_shape_entered" from="BulletArea" to="." method="_on_BulletArea_body_shape_entered"]
